package server

import "github.com/zhsyourai/teddy-backend/common/proto/captcha"

func validateGetCaptchaIdReq(req *captcha.GetCaptchaIdReq) error {
	return nil
}

func validateGetImageDataReq(req *captcha.GetImageDataReq) error {
	return nil
}

func validateGetRandomReq(req *captcha.GetRandomReq) error {
	return nil
}

func validateGetVoiceDataReq(req *captcha.GetVoiceDataReq) error {
	return nil
}

func validateVerifyReq(req *captcha.VerifyReq) error {
	return nil
}
